--- a/asset/index.less
+++ b/asset/index.less
@@ -14,7 +14,7 @@
 	line-height: 50px;
 	//background-color: rgba(0,0,0,.8);
 	text-align: center;
-	box-shadow: 0 1px 2px #eee;		
+	box-shadow: 0 1px 1px #000;		
 	-webkit-tap-highlight-color:none;
 	padding:0 50px;
 	.left-menu{
@@ -72,7 +72,7 @@
 			}
 			//display: none;
 			//transform: scale(0);
-			transform: translate(100%,0%);
+			-webkit-transform: translate(100%,0%);
 			background-color: #fff;
 			color:#06c;
 			text-align: left;
