--- a/asset/index.less
+++ b/asset/index.less
@@ -68,7 +68,8 @@
 				position: absolute;
 				color:#fff;
 				right: 17px;
-				top:-24px;
+				top:-11px;
+				line-height: 1;
 			}
 			//display: none;
 			//transform: scale(0);
@@ -98,7 +99,7 @@
 			left:0;
 			height:100%;
 			width: 100%;
-			background-color: rgba(0,0,0,.5);
+			background-color: rgba(0,0,0,.2);
 			transition: all .5s;
 			display: none;
 		}
