--- a/asset/index.less
+++ b/asset/index.less
@@ -74,6 +74,7 @@
 			//display: none;
 			//transform: scale(0);
 			-webkit-transform: translate(100%,0%);
+			opacity: 0;
 			background-color: #fff;
 			color:#06c;
 			text-align: left;
@@ -106,6 +107,7 @@
 		&.opened{
 			.list{
 				transform: translate(0,0);
+				opacity: 1;
 			}
 			.mask{
 				display: block;
@@ -113,12 +115,26 @@
 			
 		}
 	}
-	
-	img{
-		max-height: 40px;
-		max-width: 50px;
-		margin:0 5px;
+	img.icon,img.logo{
+
+		background-repeat: no-repeat;
+		background-position: center;
+		background-size: contain;
+		-webkit-background-size: contain;
 		vertical-align: middle;
+	}
+	img.logo{
+		
+		margin:0 5px;
+		
+		width:80px;
+		height:46px;
+
+	}
+	img.icon{
+		width:24px;
+		height:24px;
+		margin-right: 5px;
 	}
 	.icon-menu{
 		font-family: 'apple-topbar-iconfont';
